<resources>
    <string name="app_name">Kue</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="Re_password">Re - Password</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_handphone">No. Handphone</string>

    <string name="home_menu_name">Home</string>
    <string name="keranjang_menu_name">Keranjang</string>
    <string name="wishlist_menu_name">Wishlist</string>
    <string name="transaksi_menu_name">Transaksi</string>
    <string name="profile_menu_name">Profile</string>
    <string name="username">Username</string>
    <string name="re_password">Re - Password</string>
    <string name="list_paket_toko">List Paket Toko</string>
    <string name="nama_paket">Nama Paket</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="todo1">TODO</string>
    <string name="todo_back">TODO</string>

    <string name="tab_beranda_home">Beranda</string>
    <string name="tab_promo_home">Promo</string>
    <string name="tab_popular_home">Popular</string>
    <string name="action_search">Search</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tambahkekeranjang">Tambahkan ke Keranjang</string>
    <string name="belibahan">Beli Bahan</string>
    <string name="bahan">Bahan</string>
    <string name="caramemasak">Cara Memasak</string>
    <string name="nama_item">Nama Produk</string>
    <string name="harga">10000</string>
    <string name="cod">COD</string>
    <string name="no_pesanan">11223</string>
    <string name="total_pesanan">20000000</string>
    <string name="dikirim_pesanan">Dikirim</string>
    <string name="alamat">jl Jalan</string>
    <string name="total_keranjang">12</string>
    <string name="judul_resep">Judul Resep</string>
    <string name="nama_resep">Nama Resep</string>
    <string name="author">Author</string>

    <string-array name="spinner_item">
        <item>COD</item>
        <item>Transfer</item>
    </string-array>
</resources>
