<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/ic_home"
        android:title="@string/home_menu_name" />
        />
    <item
        android:id="@+id/keranjang_menu"
        android:title="@string/keranjang_menu_name"
        android:icon="@drawable/ic_shopping_cartx"
        />
    <item
        android:id="@+id/wishlist_menu"
        android:title="@string/wishlist_menu_name"
        android:icon="@drawable/ic_heart"
        />
    <item
        android:id="@+id/traksaksi_menu"
        android:title="@string/transaksi_menu_name"
        android:icon="@drawable/ic_wedding_planning"
        />
    <item
        android:id="@+id/profile_menu"
        android:title="@string/profile_menu_name"
        android:icon="@drawable/ic_avatar"
        />
</menu>