<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_foto_barang"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="27dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:background="@mipmap/ic_launcher"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_namabarang"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/nama_item"
        android:textColor="#7D7D7D"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/iv_foto_barang"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="12dp" />


    <TextView
        android:id="@+id/tv_harga"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="7dp"
        android:text="@string/harga"
        android:textColor="#707070"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/iv_foto_barang"
        app:layout_constraintTop_toBottomOf="@+id/tv_namabarang"
        android:layout_marginLeft="12dp" />


</android.support.constraint.ConstraintLayout>