<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        app:cardBackgroundColor="#FFFF"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_foto_barang"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@mipmap/ic_launcher"
                android:contentDescription="@string/todo1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/tv_namapaket"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="16dp"
                android:text="@string/nama_paket"
                android:textColor="#7D7D7D"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@+id/iv_foto_barang"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_namatoko"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="7dp"
                android:text="@string/nama_toko"
                android:textStyle="bold"
                android:textColor="#707070"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/iv_foto_barang"
                app:layout_constraintTop_toBottomOf="@+id/tv_namapaket" />

            <ImageView
                android:id="@+id/iv_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:background="@drawable/ic_next"
                android:contentDescription="@string/todo_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>