<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_namatoko_keranjang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:text="@string/nama_toko"
        android:textStyle="bold"
        android:textColor="#707070"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="22dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="340dp"
        android:layout_height="125dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="13dp"
        app:cardBackgroundColor="#FFFF"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_namatoko_keranjang">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_foto_barang"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="27dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="27dp"
                android:background="@mipmap/ic_launcher"
                android:contentDescription="@string/todo1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_namabarang"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="30dp"
                android:text="@string/nama_item"
                android:textColor="#7D7D7D"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@+id/iv_foto_barang"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="12dp" />


            <TextView
                android:id="@+id/tv_harga"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="7dp"
                android:text="@string/harga"
                android:textColor="#707070"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/iv_foto_barang"
                app:layout_constraintTop_toBottomOf="@+id/tv_namabarang"
                android:layout_marginLeft="12dp" />

            <CheckBox
                android:id="@+id/cb_keranjang"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="23dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="24dp" />

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="23dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/ic_trash"
                android:contentDescription="@string/todo_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="24dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

   <RadioGroup
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintTop_toBottomOf="@+id/cardView"
       android:id="@+id/rg_keranjang">
       <RadioButton
           android:id="@+id/rb_gosend"
           android:layout_width="30dp"
           android:layout_height="40dp"
           android:layout_marginStart="43dp"
           android:layout_marginTop="20dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/cardView"
           android:layout_marginLeft="43dp"
           />

       <ImageView
           android:id="@+id/iv_gosend"
           android:layout_width="90dp"
           android:layout_height="25dp"
           android:layout_marginStart="10dp"
           android:layout_marginTop="28dp"
           android:background="@drawable/gosend"
           android:contentDescription="@string/todo_back"
           app:layout_constraintStart_toEndOf="@+id/rb_gosend"
           app:layout_constraintTop_toBottomOf="@+id/cardView"
           android:layout_marginLeft="10dp" />

       <RadioButton
           android:id="@+id/rb_cod"
           android:layout_width="30dp"
           android:layout_height="40dp"
           android:layout_marginStart="28dp"
           android:layout_marginTop="20dp"
           app:layout_constraintStart_toEndOf="@+id/iv_gosend"
           app:layout_constraintTop_toBottomOf="@+id/cardView"
           android:layout_marginLeft="28dp"
           />

       <TextView
           android:id="@+id/textView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="9dp"
           android:layout_marginTop="20dp"
           android:text="@string/cod"
           android:textColor="#000"
           android:textSize="25sp"
           app:layout_constraintStart_toEndOf="@+id/rb_cod"
           app:layout_constraintTop_toBottomOf="@+id/cardView"
           android:layout_marginLeft="9dp" />
   </RadioGroup>

</android.support.constraint.ConstraintLayout>