<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity"
    android:background="@color/biru">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<ImageView-->
        <!--android:id="@+id/iv_Logo"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginTop="56dp"-->
        <!--android:layout_marginRight="80dp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:srcCompat="@drawable/logo"
       // android:contentDescription="@string/-->
        <!--android:layout_marginEnd="80dp" />-->

        <EditText
            android:id="@+id/et_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="223dp"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_man_user"
            android:drawablePadding="20dp"
            android:drawableTint="@color/abu"
            android:ems="10"
            android:fontFamily="@font/mukta_vaani_extralight"
            android:hint="@string/nama_lengkap"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_nohp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_phone_receiver"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/mukta_vaani_extralight"
            android:hint="@string/no_handphone"
            android:inputType="phone"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nama"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_envelope"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/mukta_vaani_extralight"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nohp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_man_user"
            android:drawablePadding="20dp"
            android:drawableTint="@color/abu"
            android:ems="10"
            android:fontFamily="@font/mukta_vaani_extralight"
            android:hint="@string/Username"
            android:inputType="phone"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_locked_padlock"
            android:drawablePadding="20dp"
            android:drawableTint="@color/abu"
            android:ems="10"
            android:fontFamily="@font/mukta_vaani_extralight"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_username"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_locked_padlock"
            android:drawablePadding="20dp"
            android:drawableTint="@color/abu"
            android:ems="10"
            android:fontFamily="@font/mukta_vaani_extralight"
            android:hint="@string/Re_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="56dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:text="@string/daftar"
            android:fontFamily="@font/mukta_vaani_extrabold"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="#FFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_repassword"
            android:layout_marginEnd="56dp" />

        <Button
            android:id="@+id/btn_kembali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="#00FFFFFF"
            android:drawableLeft="@drawable/ic_left_arrowx"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white"
            android:fontFamily="@font/mukta_vaani_extrabold"
            android:text="Kembali"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.031"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>